@@ -124,8 +124,7 @@ public class DropOffPlace extends ServiceProviderPlace implements EmptyFormPlace
 
             try {
                 final Object filter = emissary.core.Factory.create(clazz);
-                if (filter != null && filter instanceof IDropOffFilter) {
-                    final IDropOffFilter f = (IDropOffFilter) filter;
+                if (filter != null && filter instanceof IDropOffFilter f) {
                     f.initialize(configG, name, filterConfig);
                     addFilter(f);
                 } else {
@@ -194,7 +193,7 @@ public class DropOffPlace extends ServiceProviderPlace implements EmptyFormPlace
             try {
                 // checking to see if any object in the tree is marked as not outputable
                 if (!d.isOutputable()) {
-                    logger.info("Skipping object since it is not able to be output ID:{}", this.dropOffUtil.getBestId(d, payloadList.get(0)));
+                    logger.info("Skipping object since it is not able to be output ID:{}", this.dropOffUtil.getBestId(d, payloadList.getFirst()));
                     return Collections.emptyList();
                 }
 
@@ -225,7 +224,7 @@ public class DropOffPlace extends ServiceProviderPlace implements EmptyFormPlace
             // Should have been sorted by the prefilter hook
 
             // Just report the TLD object ID
-            final IBaseDataObject tld = payloadList.get(0);
+            final IBaseDataObject tld = payloadList.getFirst();
 
 
             if (outputCompletionPayloadSize && tld.hasContent()) {
@@ -291,7 +290,7 @@ public class DropOffPlace extends ServiceProviderPlace implements EmptyFormPlace
         // Sort the list of records
         Collections.sort(payloadList, new ShortNameComparator());
         filterParams.put(IDropOffFilter.PRE_SORTED, Boolean.TRUE);
-        filterParams.put(IDropOffFilter.TLD_PARAM, payloadList.get(0));
+        filterParams.put(IDropOffFilter.TLD_PARAM, payloadList.getFirst());
 
         // Prepare the metadata
         this.dropOffUtil.processMetadata(payloadList);
@@ -410,8 +409,8 @@ public class DropOffPlace extends ServiceProviderPlace implements EmptyFormPlace
 
         IBaseDataObject doTarget = null;
         List<IBaseDataObject> listTarget = null;
-        if (target instanceof IBaseDataObject) {
-            doTarget = (IBaseDataObject) target;
+        if (target instanceof IBaseDataObject object) {
+            doTarget = object;
         } else if (target instanceof List) {
             listTarget = (List<IBaseDataObject>) target;
         } else {
