@@ -49,7 +49,7 @@ public class DataByteBufferSlicer {
 
         // Use higher performing impl when only one record
         if (list.size() == 1) {
-            return makeDataSlice(data, list.get(0));
+            return makeDataSlice(data, list.getFirst());
         }
 
         // Aggregate all the pieces using the baos
